cilium/deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-to-web
  namespace: demo
spec:
  endpointSelector:
    matchLabels:
      app: web
  ingress:
  - {}
